--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/3360web.loader.js";
+      var loaderUrl = buildUrl + "/EIE3360web2.loader.js";
       var config = {
-        dataUrl: buildUrl + "/3360web.data",
-        frameworkUrl: buildUrl + "/3360web.framework.js",
-        codeUrl: buildUrl + "/3360web.wasm",
+        dataUrl: buildUrl + "/EIE3360web2.data",
+        frameworkUrl: buildUrl + "/EIE3360web2.framework.js",
+        codeUrl: buildUrl + "/EIE3360web2.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "EIE3360-GP",
