--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/EIE3360web2.loader.js";
       var config = {
-        dataUrl: "https://media.githubusercontent.com/media/kinyip3/EIE3360GP13/main/Build/EIE3360web2.data",
+        dataUrl: "https://media.githubusercontent.com/media/kinyip3/EIE3360GP13/main/Build/EIE3360-project-WebGL.data?download=true",
         frameworkUrl: buildUrl + "/EIE3360web2.framework.js",
         codeUrl: buildUrl + "/EIE3360web2.wasm",
         streamingAssetsUrl: "StreamingAssets",
