--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/EIE3360web2.loader.js";
+      var loaderUrl = buildUrl + "/EIE3360-project-WebGL.loader.js";
       var config = {
         dataUrl: "https://media.githubusercontent.com/media/kinyip3/EIE3360GP13/main/Build/EIE3360-project-WebGL.data?download=true",
-        frameworkUrl: buildUrl + "/EIE3360web2.framework.js",
-        codeUrl: buildUrl + "/EIE3360web2.wasm",
+        frameworkUrl: buildUrl + "/EIE3360-project-WebGL.framework.js",
+        codeUrl: buildUrl + "/EIE3360-project-WebGL.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "EIE3360-GP",
